--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
 import Layout from "../layouts/Layout.astro";
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-    <div class="h-screen w-full flex">
-        <h1>New site coming soon</h1>
+    <div class="h-screen w-full flex p-1.5">
+        <h1
+            class="text-[clamp(24px,12svw,66px)] leading-none font-black uppercase text-balance self-end"
+        >
+            New site coming soon
+        </h1>
     </div>
 </Layout>
