Publish temporary page #3

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
 
-import SocialLink from "../components/SocialLink.astro";
+import SocialLink from "@components/SocialLink.astro";
 
-import ContraLogo from "../assets/social-logos/contra.svg";
+import ContraLogo from "@assets/social-logos/contra.svg";
 import LinkedinLogo from "../assets/social-logos/linkedin.svg";
 import UpworkLogo from "../assets/social-logos/upwork.svg";
 import TgLogo from "../assets/social-logos/tg.svg";
@@ -29,9 +29,9 @@ import TgLogo from "../assets/social-logos/tg.svg";
             <address>
                 <ul class="flex gap-x-2 lg:justify-end">
                     <SocialLink
-                        href="https://www.linkedin.com/in/ivan-pozdnovskii/?locale=en_US"
-                        ariaLabel="Linkedin account"
-                        Icon={LinkedinLogo}
+                        href="https://www.upwork.com/freelancers/~014d1e5fca851a8c3a?mp_source=share"
+                        ariaLabel="Upwork account"
+                        Icon={UpworkLogo}
                     />
                     <SocialLink
                         href="https://contra.com/ipozdnovskii_f3llzxwh?referralExperimentNid=SOCIAL_REFERRAL_PROGRAM&referrerUsername=ipozdnovskii_f3llzxwh"
@@ -39,9 +39,9 @@ import TgLogo from "../assets/social-logos/tg.svg";
                         Icon={ContraLogo}
                     />
                     <SocialLink
-                        href="https://www.upwork.com/freelancers/~014d1e5fca851a8c3a?mp_source=share"
-                        ariaLabel="Upwork account"
-                        Icon={UpworkLogo}
+                        href="https://www.linkedin.com/in/ivan-pozdnovskii/?locale=en_US"
+                        ariaLabel="Linkedin account"
+                        Icon={LinkedinLogo}
                     />
                     <SocialLink
                         href="https://t.me/pozdnovskii"
