--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,9 @@ import Layout from "../layouts/Layout.astro";
 import SocialLink from "@components/SocialLink.astro";
 
 import ContraLogo from "@assets/social-logos/contra.svg";
-import LinkedinLogo from "../assets/social-logos/linkedin.svg";
-import UpworkLogo from "../assets/social-logos/upwork.svg";
-import TgLogo from "../assets/social-logos/tg.svg";
+import LinkedinLogo from "@assets/social-logos/linkedin.svg";
+import UpworkLogo from "@assets/social-logos/upwork.svg";
+import TgLogo from "@assets/social-logos/tg.svg";
 ---
 
 <Layout>
