--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
 
-import SocialLink from "@components/SocialLink.astro";
+import SocialLink from "../components/SocialLink.astro";
 
-import ContraLogo from "@assets/social-logos/contra.svg";
-import LinkedinLogo from "@assets/social-logos/linkedin.svg";
-import UpworkLogo from "@assets/social-logos/upwork.svg";
-import TgLogo from "@assets/social-logos/tg.svg";
+import ContraLogo from "../assets/social-logos/contra.svg";
+import LinkedinLogo from "../assets/social-logos/linkedin.svg";
+import UpworkLogo from "../assets/social-logos/upwork.svg";
+import TgLogo from "../assets/social-logos/tg.svg";
 ---
 
 <Layout>
