--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,10 @@ import Layout from "../layouts/Layout.astro";
 
 import SocialLink from "../components/SocialLink.astro";
 
-import ContraLogo from "../assets/social-logos/contra.svg";
-import LinkedinLogo from "../assets/social-logos/linkedin.svg";
-import UpworkLogo from "../assets/social-logos/upwork.svg";
-import TgLogo from "../assets/social-logos/tg.svg";
+import ContraLogo from "@assets/social-logos/contra.svg";
+import LinkedinLogo from "@assets/social-logos/linkedin.svg";
+import UpworkLogo from "@assets/social-logos/upwork.svg";
+import TgLogo from "@assets/social-logos/tg.svg";
 ---
 
 <Layout>
