--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 
-import SocialLink from "../components/SocialLink.astro";
+import SocialLink from "@components/SocialLink.astro";
 
 import ContraLogo from "@assets/social-logos/contra.svg";
 import LinkedinLogo from "@assets/social-logos/linkedin.svg";
