--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
 
-import SocialLink from "@components/SocialLink.astro";
+import SocialLink from "../components/SocialLink.astro";
 
-import ContraLogo from "@assets/social-logos/contra.svg";
-import LinkedinLogo from "@assets/social-logos/linkedin.svg";
-import UpworkLogo from "@assets/social-logos/upwork.svg";
-import TgLogo from "@assets/social-logos/tg.svg";
+import ContraLogo from "../assets/social-logos/contra.svg";
+import LinkedinLogo from "../assets/social-logos/linkedin.svg";
+import UpworkLogo from "../assets/social-logos/upwork.svg";
+import TgLogo from "../assets/social-logos/tg.svg";
 ---
 
 <Layout>
@@ -28,7 +28,19 @@ import TgLogo from "@assets/social-logos/tg.svg";
             </h2>
             <address>
                 <ul class="flex gap-x-2 lg:justify-end">
-                    <SocialLink
+                    <li
+                        class="w-[clamp(45px,2.5em,78px)] translate-x-[calc(clamp(45px,2.5em,78px)/-6)] lg:translate-x-[calc(clamp(45px,2.5em,78px)/6)]"
+                    >
+                        <a
+                            href="https://contra.com/ipozdnovskii_f3llzxwh?referralExperimentNid=SOCIAL_REFERRAL_PROGRAM&referrerUsername=ipozdnovskii_f3llzxwh"
+                            aria-label="Contra account"
+                            target="_blank"
+                            class="w-full flex justify-center items-center"
+                            ><ContraLogo /></a
+                        >
+                    </li>
+
+                    <!-- <SocialLink
                         href="https://www.upwork.com/freelancers/~014d1e5fca851a8c3a?mp_source=share"
                         ariaLabel="Upwork account"
                         Icon={UpworkLogo}
@@ -47,7 +59,7 @@ import TgLogo from "@assets/social-logos/tg.svg";
                         href="https://t.me/pozdnovskii"
                         ariaLabel="Telegram account"
                         Icon={TgLogo}
-                    />
+                    /> -->
                 </ul>
             </address>
         </section>
