--- a/src/draft/future.astro
+++ b/src/draft/future.astro
@@ -1,4 +1,9 @@
 ---
+// import SocialLink from "../components/SocialLink.astro";
+// import LinkedinLogo from "../assets/social-logos/linkedin.svg";
+// import UpworkLogo from "../assets/social-logos/upwork.svg";
+// import TgLogo from "../assets/social-logos/tg.svg";
+
 import Layout from "../layouts/Layout.astro";
 
 import AstroLogo from "../assets/tech-logos/astro.svg";
