--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
 
-import ContraLogo from "../assets/social-logos/logo.svg";
+import ContraLogo from "../assets/social-logos/contra_logo.svg";
+import UpworkLogo from "../assets/social-logos/upwork_logo.svg";
+import LinkedinLogo from "../assets/social-logos/linkedin_logo.svg";
+import TgLogo from "../assets/social-logos/tg_logo.svg";
 ---
 
 <Layout>
