--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,29 +28,17 @@ import TgLogo from "../assets/social-logos/tg_logo.svg";
             </h2>
             <address>
                 <ul class="flex gap-x-2 lg:justify-end">
-                    <!-- <li
-                        class="w-[clamp(45px,2.5em,78px)] translate-x-[calc(clamp(45px,2.5em,78px)/-6)] lg:translate-x-[calc(clamp(45px,2.5em,78px)/6)]"
-                    >
-                        <a
-                            href="https://contra.com/ipozdnovskii_f3llzxwh?referralExperimentNid=SOCIAL_REFERRAL_PROGRAM&referrerUsername=ipozdnovskii_f3llzxwh"
-                            aria-label="Contra account"
-                            target="_blank"
-                            class="w-full flex justify-center items-center"
-                            ><ContraLogo /></a
-                        >
-                    </li> -->
                     <SocialLink
                         href="https://contra.com/ipozdnovskii_f3llzxwh?referralExperimentNid=SOCIAL_REFERRAL_PROGRAM&referrerUsername=ipozdnovskii_f3llzxwh"
                         ariaLabel="Contra account"
                         Icon={ContraLogo}
                     />
-                    <!-- <SocialLink
+                    <SocialLink
                         href="https://www.upwork.com/freelancers/~014d1e5fca851a8c3a?mp_source=share"
                         ariaLabel="Upwork account"
                         Icon={UpworkLogo}
                     />
-                    <SocialLink
-                    />
+                    <SocialLink />
                     <SocialLink
                         href="https://www.linkedin.com/in/ivan-pozdnovskii/?locale=en_US"
                         ariaLabel="Linkedin account"
@@ -60,7 +48,7 @@ import TgLogo from "../assets/social-logos/tg_logo.svg";
                         href="https://t.me/pozdnovskii"
                         ariaLabel="Telegram account"
                         Icon={TgLogo}
-                    /> -->
+                    />
                 </ul>
             </address>
         </section>
