--- a/src/pages/anim.astro
+++ b/src/pages/anim.astro
@@ -18,7 +18,7 @@ import TgLogo from "../assets/social-logos/tg_logo.svg";
                 <h1
                     class="text-[clamp(24px,1rem+8.4svw,66px)] leading-none font-black uppercase text-balance"
                 >
-                    New Website Coming Soon
+                    New Website Coming Soon Soon
                 </h1>
                 <!-- <p class="text-[clamp(18px,.33rem+4.8svw,36px)] font-medium">
                 ready by 07/07
