--- a/src/pages/future.astro
+++ b/src/pages/future.astro
@@ -21,36 +21,36 @@ import TgLogo from "../assets/social-logos/tg_logo.svg";
 ---
 
 <Layout>
-    <header class="hidden fixed w-full z-10 justify-between items-center">
-        <a href="/">Weblate</a>
-        <nav class="hidden lg:block">
-            <ul class="flex gap-x-4">
-                <li><a href="#services">Services</a></li><li>
-                    <a href="#works">Works</a>
-                </li>
-                <li><a href="practices">Practices</a></li>
-            </ul>
-        </nav>
-        <a href="#" class="hidden lg:block">Grow my project</a>
-    </header>
+  <header class="hidden fixed w-full z-10 justify-between items-center">
+    <a href="/">Weblate</a>
+    <nav class="hidden lg:block">
+      <ul class="flex gap-x-4">
+        <li><a href="#services">Services</a></li><li>
+          <a href="#works">Works</a>
+        </li>
+        <li><a href="practices">Practices</a></li>
+      </ul>
+    </nav>
+    <a href="#" class="hidden lg:block">Grow my project</a>
+  </header>
 
-    <!-- <div id="body__background"></div> -->
+  <!-- <div id="body__background"></div> -->
 
-    <main class="relative flex flex-col gap-y-[66svw] px-[6svw]">
-        <section id="hero" class="h-screen py-4 flex flex-col gap-[21svw]">
-            <div class="relative flex flex-col gap-3 mt-auto">
-                <h1
-                    class="opacity-80 text-[11.1svw] tracking-tight font-mono font-extralight leading-[1.15em]"
-                >
-                    Meticulous Developer For Your Website
-                </h1>
-                <p class="text-[5.1svw] leading-[1.66em] text-pretty">
-                    I specialize in fast-loading, SEO-friendly, accessible
-                    websites — built to <span class="block italic font-serif"
-                        >rank higher and perform better.</span
-                    >
-                </p>
-                <!-- <div
+  <main class="relative flex flex-col gap-y-[66svw] px-[6svw]">
+    <section id="hero" class="h-screen py-4 flex flex-col gap-[21svw]">
+      <div class="relative flex flex-col gap-3 mt-auto">
+        <h1
+          class="opacity-80 text-[11.1svw] tracking-tight font-mono font-extralight leading-[1.15em]"
+        >
+          Meticulous Developer For Your Website
+        </h1>
+        <p class="text-[5.1svw] leading-[1.66em] text-pretty">
+          I specialize in fast-loading, SEO-friendly, accessible websites —
+          built to <span class="block italic font-serif"
+            >rank higher and perform better.</span
+          >
+        </p>
+        <!-- <div
                     id="body__background"
                     class="absolute text-teal-100 -z-1 w-full h-full grid grid-cols-12 gap-1 p-1 *:aspect-square *:bg-teal-50"
                 >
@@ -151,134 +151,130 @@ import TgLogo from "../assets/social-logos/tg_logo.svg";
                     <div></div>
                     <div></div>
                 </div> -->
-            </div>
+      </div>
 
-            <div class="font-mono leading-4 -order-1 flex flex-col">
-                <span class="font-medium tracking-tighter"
-                    >Ivan Pozdnovskii</span
-                >
-                <span class="text-sm">Website Developer</span>
-            </div>
+      <div class="font-mono leading-4 -order-1 flex flex-col">
+        <span class="font-medium tracking-tighter">Ivan Pozdnovskii</span>
+        <span class="text-sm">Website Developer</span>
+      </div>
 
-            <div class="">
-                <h2
-                    class="font-mono tracking-tighter text-[clamp(18px,.5rem+3.6svw,30px)] font-light mb-2"
-                >
-                    Write me here:
-                </h2>
-                <address>
-                    <ul class="flex gap-x-1 lg:justify-end">
-                        <SocialLink
-                            href="https://contra.com/ipozdnovskii_f3llzxwh?referralExperimentNid=SOCIAL_REFERRAL_PROGRAM&referrerUsername=ipozdnovskii_f3llzxwh"
-                            ariaLabel="Contra account"
-                            Icon={ContraLogo}
-                        />
-                        <SocialLink
-                            href="https://www.upwork.com/freelancers/~014d1e5fca851a8c3a?mp_source=share"
-                            ariaLabel="Upwork account"
-                            Icon={UpworkLogo}
-                        />
-                        <SocialLink
-                            href="https://www.linkedin.com/in/ivan-pozdnovskii/?locale=en_US"
-                            ariaLabel="Linkedin account"
-                            Icon={LinkedinLogo}
-                        />
-                        <SocialLink
-                            href="https://t.me/pozdnovskii"
-                            ariaLabel="Telegram account"
-                            Icon={TgLogo}
-                        />
-                    </ul>
-                </address>
-            </div>
-        </section>
+      <div class="">
+        <h2
+          class="font-mono tracking-tighter text-[clamp(18px,.5rem+3.6svw,30px)] font-light mb-2"
+        >
+          Write me here:
+        </h2>
+        <address>
+          <ul class="flex gap-x-1 lg:justify-end">
+            <SocialLink
+              href="https://contra.com/ipozdnovskii_f3llzxwh?referralExperimentNid=SOCIAL_REFERRAL_PROGRAM&referrerUsername=ipozdnovskii_f3llzxwh"
+              ariaLabel="Contra account"
+              Icon={ContraLogo}
+            />
+            <SocialLink
+              href="https://www.upwork.com/freelancers/~014d1e5fca851a8c3a?mp_source=share"
+              ariaLabel="Upwork account"
+              Icon={UpworkLogo}
+            />
+            <SocialLink
+              href="https://www.linkedin.com/in/ivan-pozdnovskii/?locale=en_US"
+              ariaLabel="Linkedin account"
+              Icon={LinkedinLogo}
+            />
+            <SocialLink
+              href="https://t.me/pozdnovskii"
+              ariaLabel="Telegram account"
+              Icon={TgLogo}
+            />
+          </ul>
+        </address>
+      </div>
+    </section>
 
-        <section id="services">
-            <h2>Our Services: We can create or improve</h2>
-            <p>
-                Specializing in web design and development for small and
-                medium-sized businesses.
-            </p>
-            <ul>
-                <li>
-                    <h3>Web Design</h3><p>
-                        We build secure, scalable websites with user-friendly
-                        CMS for easy updates, optimized for fast loading and
-                        seamless user experience.
-                    </p>
-                </li>
-            </ul>
-        </section>
+    <section id="services">
+      <h2>Our Services: We can create or improve</h2>
+      <p>
+        Specializing in web design and development for small and medium-sized
+        businesses.
+      </p>
+      <ul>
+        <li>
+          <h3>Web Design</h3><p>
+            We build secure, scalable websites with user-friendly CMS for easy
+            updates, optimized for fast loading and seamless user experience.
+          </p>
+        </li>
+      </ul>
+    </section>
 
-        <section id="works">
-            <h2>Our Services: We can create or improve</h2>
-        </section>
+    <section id="works">
+      <h2>Our Services: We can create or improve</h2>
+    </section>
 
-        <section id="tools" class="hidden">
-            <h2>Technologies & Tools</h2>
-            <p>
-                We work with modern, reliable technologies to deliver
-                exceptional results.
-            </p>
-            <ul class="flex *:grow [&_svg]:h-8">
-                <li>
-                    <AstroLogo />
-                </li>
-                <li>
-                    <CssLogo />
-                </li>
-                <li>
-                    <GsapLogo />
-                </li>
-                <li>
-                    <HtmlLogo />
-                </li>
-                <li>
-                    <JsLogo />
-                </li>
-                <li>
-                    <ReploLogo />
-                </li>
-                <li>
-                    <ShopifyLogo />
-                </li>
-                <li>
-                    <TailwindLogo />
-                </li>
-                <li>
-                    <WebflowLogo />
-                </li>
-                <li>
-                    <WebstudioLogo />
-                </li>
-            </ul>
-        </section>
+    <section id="tools" class="hidden">
+      <h2>Technologies & Tools</h2>
+      <p>
+        We work with modern, reliable technologies to deliver exceptional
+        results.
+      </p>
+      <ul class="flex *:grow [&_svg]:h-8">
+        <li>
+          <AstroLogo />
+        </li>
+        <li>
+          <CssLogo />
+        </li>
+        <li>
+          <GsapLogo />
+        </li>
+        <li>
+          <HtmlLogo />
+        </li>
+        <li>
+          <JsLogo />
+        </li>
+        <li>
+          <ReploLogo />
+        </li>
+        <li>
+          <ShopifyLogo />
+        </li>
+        <li>
+          <TailwindLogo />
+        </li>
+        <li>
+          <WebflowLogo />
+        </li>
+        <li>
+          <WebstudioLogo />
+        </li>
+      </ul>
+    </section>
 
-        <section id="testimonials">
-            <h2>Testimonials</h2>
-            <ul>
-                <li>
-                    <article>
-                        <blockquote>
-                            "Hands down the most reliable and effective
-                            contractor I've worked with. Hired for a short-term
-                            project - but found myself looking for new work to
-                            hand off to Ivan knowing his skills."
-                        </blockquote>
-                        <figure>
-                            <img src="" alt="" />
-                            <span></span>
-                            <span></span>
-                        </figure>
-                        <a href="" target="_blank">Visit site →</a>
-                    </article>
-                </li>
-            </ul>
-        </section>
-    </main>
+    <section id="testimonials">
+      <h2>Testimonials</h2>
+      <ul>
+        <li>
+          <article>
+            <blockquote>
+              "Hands down the most reliable and effective contractor I've worked
+              with. Hired for a short-term project - but found myself looking
+              for new work to hand off to Ivan knowing his skills."
+            </blockquote>
+            <figure>
+              <img src="" alt="" />
+              <span></span>
+              <span></span>
+            </figure>
+            <a href="" target="_blank">Visit site →</a>
+          </article>
+        </li>
+      </ul>
+    </section>
+  </main>
 
-    <footer></footer>
-    <script>
-        import("../scripts/animation");
-    </script>
+  <footer></footer>
+  <script>
+    import("../scripts/animation");
+  </script>
 </Layout>
