--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,46 +1,47 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 
 @layer base {
-    html,
-    body {
-        margin: 0;
-        width: 100%;
-        height: 100%;
-    }
+  html,
+  body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+  }
 
-    h2 {
-        font-size: 2rem;
-        font-weight: bold;
-        margin-bottom: 1rem;
-    }
+  h2 {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+  }
 
-    #body__background {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-    }
+  #body__background {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+  }
 
-    #body__background::before,
-    #body__background::after {
-        content: "";
-        display: none;
-        position: absolute;
-        background-color: white;
-        border-radius: 40% 60% 30% 70% / 35% 50% 50% 65%;
-        filter: blur(3vw);
-    }
+  #body__background::before,
+  #body__background::after {
+    content: "";
+    display: none;
+    position: absolute;
+    background-color: white;
+    border-radius: 40% 60% 30% 70% / 35% 50% 50% 65%;
+    filter: blur(3vw);
+  }
 
-    #body__background::before {
-        top: 30%;
-        left: 10%;
-        width: 24%;
-        aspect-ratio: 16/9;
-    }
+  #body__background::before {
+    top: 30%;
+    left: 10%;
+    width: 24%;
+    aspect-ratio: 16/9;
+  }
 
-    #body__background::after {
-        top: 60%;
-        right: 10%;
-        width: 36%;
-        aspect-ratio: 1;
-    }
+  #body__background::after {
+    top: 60%;
+    right: 10%;
+    width: 36%;
+    aspect-ratio: 1;
+  }
 }
