Change hight on the main page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import TgLogo from "../assets/social-logos/tg_logo.svg";
 ---
 
 <Layout>
-  <main class="h-screen w-full px-3 py-5 flex flex-col justify-between">
+  <main class="h-[100dvh] w-full px-3 py-5 flex flex-col justify-between">
     <section>
       <h1
         class="text-[clamp(24px,1rem+8.4svw,66px)] leading-none font-black uppercase text-balance"
