--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
     <link rel="canonical" href={canonicalURL} />
     <meta name="view-transition" content="same-origin" />
   </head>
-  <body class="bg-indigo-50/48">
+  <body class="2xl:container mx-auto bg-indigo-50/48">
     <slot />
   </body>
 </html>
