--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,14 +30,14 @@ import SocialLinksList from "../components/SocilaLinksList.astro";
       id="hero"
       class="min-h-[100dvh] py-4 flex flex-col gap-[min(21svw,6rem)] justify-end pt-24"
     >
-      <div class="text-balance w-[48rem] max-w-full relative flex flex-col">
+      <div class="text-balance relative flex flex-col">
         <h1
           class="text-[clamp(30px,1rem+6.3svw,4rem)] tracking-tight font-mono font-extralight leading-[min(1.15em,66px)] w-[9em] max-w-full mb-[.36em] opacity-80"
         >
           Meticulous Developer For Your Website
         </h1>
         <p
-          class="text-[clamp(16px,.27rem+3.3svw,1.75rem)] leading-[1.66em] text-pretty"
+          class="text-[clamp(16px,.3rem+3.6svw,1.75rem)] leading-[1.66em] text-balance w-[24em] max-w-full"
         >
           I specialize in fast-loading, SEO-friendly, accessible websites —
           built to <span class="inline-block italic font-serif"
