Fix font size #5

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import SocialLinksList from "../components/SocilaLinksList.astro";
         >
           Meticulous Developer For Your Website
         </h1>
-        <p class="text-base leading-[1.66em] text-balance w-[24em] max-w-full">
+        <p class="text-base leading-[1.66em] w-[24em] max-w-full">
           I specialize in fast-loading, SEO-friendly, accessible websites —
           built to <span class="inline-block italic font-serif"
             >rank higher and perform better.</span
