--- a/src/components/HowToSection.astro
+++ b/src/components/HowToSection.astro
@@ -1,66 +1,18 @@
 ---
-import Card from "../components/Card.astro";
-import CardList from "../components/CardList.astro";
+import HowToCard from "../components/HowToCard.astro";
+import HowToCardList from "../components/HowToCardList.astro";
 import cards from "../data/howTo.json";
 ---
 
-<section id="how">
-  <h2 class="font-mono font-semibold leading-tight text-3xl">How I Work</h2>
-  <div class="flex flex-col gap-8 relative">
+<section id="how-to">
+  <h2>How I Work</h2>
+  <div class="flex flex-col gap-section-sm">
     {
       cards.map((card) => (
-        <Card title={card.title} description={card.description}>
-          <CardList items={card.items} />
-        </Card>
+        <HowToCard title={card.title} description={card.description}>
+          <HowToCardList items={card.items} />
+        </HowToCard>
       ))
     }
-    <!-- <div class="ellipse"></div>
-    <div class="scene">
-      <div class="cube" style="--i: 0">
-        <div></div>
-      </div>
-      <div class="cube" style="--i: 1">
-        <div></div>
-      </div>
-      <div class="cube" style="--i: 2">
-        <div></div>
-      </div>
-      <div class="cube" style="--i: 3">
-        <div></div>
-      </div>
-      <div class="cube" style="--i: 4">
-        <div></div>
-      </div>
-      <div class="cube" style="--i: 5">
-        <div></div>
-      </div>
-      <div class="cube" style="--i: 6">
-        <div></div>
-      </div>
-      <div class="cube" style="--i: 7">
-        <div></div>
-      </div>
-      <div class="cube" style="--i: 8">
-        <div></div>
-      </div>
-      <div class="cube" style="--i: 9">
-        <div></div>
-      </div>
-      <div class="cube" style="--i: 10">
-        <div></div>
-      </div>
-      <div class="cube" style="--i: 11">
-        <div></div>
-      </div>
-      <div class="cube" style="--i: 12">
-        <div></div>
-      </div>
-      <div class="cube" style="--i: 13">
-        <div></div>
-      </div>
-      <div class="cube" style="--i: 14">
-        <div></div>
-      </div>
-    </div> -->
   </div>
 </section>
