--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,25 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
     <link rel="canonical" href={canonicalURL} />
     <meta name="view-transition" content="same-origin" />
   </head>
-  <body class="2xl:container mx-auto bg-indigo-50/48">
+  <body class="2xl:container mx-auto px-svw bg-indigo-50/48">
     <slot />
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const dialog = document.querySelector("dialog");
+
+        if (!dialog) return;
+
+        setTimeout(() => {
+          dialog.showModal();
+        }, 1200);
+
+        dialog.addEventListener("click", (event) => {
+          const isBackdropClick = event.target === dialog;
+          if (isBackdropClick) {
+            dialog.close();
+          }
+        });
+      });
+    </script>
   </body>
 </html>
