--- a/src/pages/anim.astro
+++ b/src/pages/anim.astro
@@ -22,7 +22,7 @@ import TgLogo from "../assets/social-logos/tg_logo.svg";
                 ready by 07/07
             </p> -->
       </section>
-
+      <!-- <div class="background"></div> -->
       <section class="lg:self-end-safe">
         <h2 class="text-[clamp(18px,1rem+4.8svw,30px)] mb-2">
           Find us here for now:
@@ -175,6 +175,54 @@ import TgLogo from "../assets/social-logos/tg_logo.svg";
       </div>
     </section>
   </div>
+  <!-- <div class="ellipse"></div>
+    <div class="scene">
+      <div class="cube" style="--i: 0">
+        <div></div>
+      </div>
+      <div class="cube" style="--i: 1">
+        <div></div>
+      </div>
+      <div class="cube" style="--i: 2">
+        <div></div>
+      </div>
+      <div class="cube" style="--i: 3">
+        <div></div>
+      </div>
+      <div class="cube" style="--i: 4">
+        <div></div>
+      </div>
+      <div class="cube" style="--i: 5">
+        <div></div>
+      </div>
+      <div class="cube" style="--i: 6">
+        <div></div>
+      </div>
+      <div class="cube" style="--i: 7">
+        <div></div>
+      </div>
+      <div class="cube" style="--i: 8">
+        <div></div>
+      </div>
+      <div class="cube" style="--i: 9">
+        <div></div>
+      </div>
+      <div class="cube" style="--i: 10">
+        <div></div>
+      </div>
+      <div class="cube" style="--i: 11">
+        <div></div>
+      </div>
+      <div class="cube" style="--i: 12">
+        <div></div>
+      </div>
+      <div class="cube" style="--i: 13">
+        <div></div>
+      </div>
+      <div class="cube" style="--i: 14">
+        <div></div>
+      </div>
+    </div> -->
   <script>
     import("../scripts/goUpAnimation");
   </script>
