Add dialog script

--- a/src/pages/new.astro
+++ b/src/pages/new.astro
@@ -22,10 +22,9 @@ import SocialLinksList from "../components/SocilaLinksList.astro";
         <li><a href="practices">Practices</a></li>
       </ul>
     </nav>
-    <a href="#" class="hidden">Grow my project</a>
   </header>
 
-  <main class="relative flex flex-col gap-y-[66svw] px-[3svw]">
+  <main class="flex flex-col gap-y-[66svw] px-[3svw]">
     <section
       id="hero"
       class="min-h-[100dvh] py-4 flex flex-col gap-[min(21svw,6rem)] justify-end pt-24"
