--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,23 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
   </head>
   <body class="2xl:container mx-auto px-svw bg-indigo-50/48">
     <slot />
+    <script is:inline>
+      document.addEventListener("DOMContentLoaded", () => {
+        const dialog = document.querySelector("dialog");
 
-    <script type="module" src="/src/scripts/modal.js"></script>
+        if (!dialog) return;
+
+        setTimeout(() => {
+          dialog.showModal();
+        }, 1200);
+
+        dialog.addEventListener("click", (event) => {
+          const isBackdropClick = event.target === dialog;
+          if (isBackdropClick) {
+            dialog.close();
+          }
+        });
+      });
+    </script>
   </body>
 </html>
