--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import ToolsSection from "../components/ToolsSection.astro";
   <dialog
     aria-labelledby="dialog-name"
     id="under-construction"
-    class="w-[30rem] max-w-full m-auto text-center bg-white p-0 border-0 rounded-md shadow-xl backdrop:bg-indigo-200/48 backdrop:backdrop-blur-md"
+    class="w-[30rem] max-w-[94%] m-auto text-center bg-white p-0 border-0 rounded-md shadow-xl backdrop:bg-indigo-200/48 backdrop:backdrop-blur-md"
   >
     <div class="p-6">
       <h2 id="dialog-name" class="text-2xl font-mono mb-4">
